# creds

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  creds
completions/: _creds  creds
data/: completions.mk
data/completions/: _creds  creds
m4/: .gitignore  creds.m4
man/: 1.mk
man/1/: creds.xml  creds.xml.in
src/: bin.mk
